z-index fix for main custom bg fixes

--- a/tumblr-custom-dash-palette.user.css
+++ b/tumblr-custom-dash-palette.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Tumblr – Custom Dashboard Palette
 @namespace      github.com/paw/tumblr-custom-palette-userstyle
-@version        0.2.3
+@version        0.2.4
 @description    `Set custom colors for your Tumblr dashboard.`
 @author         github.com/paw
 @updateURL      https://github.com/paw/tumblr-custom-palette-userstyle/raw/main/tumblr-custom-dash-palette.user.css
@@ -102,6 +102,10 @@ editorsize7 "1.6x" <<<EOT 1.6 EOT;
 @advanced dropdown bgasidefix "Fixes for Custom BG Images" {
 bgasidefix2 "Disable" <<<EOT  EOT;
 bgasidefix1 "Enable" <<<EOT 
+    body#tumblr main {
+        position: relative;
+        z-index: 3;
+    }
     body#tumblr aside > div {
         border-radius: 3px;
     }
